fix: add scrollbar hide ignore #43

--- a/src/workspace/scrollbar.scss
+++ b/src/workspace/scrollbar.scss
@@ -24,20 +24,16 @@ $calendar: ".workspace-leaf-content[data-type='calendar'] .view-content";
 
 $plugins: $calendar, $janitor, $excalidraw, $kanban;
 
-body.scrollbar-hide ::-webkit-scrollbar {
-  display: none;
-}
-
 @property --scrollbar-color {
   syntax: '<color>';
   inherits: true;
   initial-value: #0000;
 }
 
-/* ! overflow: overlay 已废弃, 详见 https://developer.mozilla.org/en-US/docs/Web/CSS/overflow#values */
+/* ! overflow: overlay 已废弃, Chrome >= 114 后等价于 overflow: auto */
 /* 使用 @property: https://stackoverflow.com/a/74050413/20058211 */
 /* 使用 -webkit-text-fill-color: https://stackoverflow.com/a/46304690/20058211 */
-body:not(.is-mobile, .scrollbar-hide) {
+body:not(.is-mobile) {
 
   &.scrollbar-gutter-overlay {
     :is(#{$base-panel}, #{$editor}, #{$plugins}) {
@@ -132,4 +128,8 @@ body:not(.is-mobile, .scrollbar-hide) {
       }
     }
   }
+}
+
+body.scrollbar-hide :not([style="overflow-x: auto;"])::-webkit-scrollbar {
+  display: none !important;
 }
